--- a/index мій сайт++.html
+++ b/index мій сайт++.html
@@ -9,7 +9,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 </head>
 <body>
-<a href="file:///C:/Users/Fujitsu/Desktop/Sublime%20Text%20Build%203176%20x64/index%20%D0%BC%D1%96%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82.html"><img src="https://image.freepik.com/free-icon/no-translate-detected_318-29938.jpg"style="width:30px;height:30px;"></a>
+<a href="index.html"><img src="https://image.freepik.com/free-icon/no-translate-detected_318-29938.jpg"style="width:30px;height:30px;"></a>
 <p>НАЗАД</p>
 <p>(на головну)</p>
 <div class="container">
