--- a/index мій сайт++++.html
+++ b/index мій сайт++++.html
@@ -56,12 +56,12 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="file:///C:/Users/Fujitsu/Desktop/Sublime%20Text%20Build%203176%20x64/index%20%D0%BC%D1%96%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82.html">Головна</a></li>
-        <li class="active"><a href="file:///C:/Users/Fujitsu/Desktop/Sublime%20Text%20Build%203176%20x64/index%20%D0%BC%D1%96%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82++++.html">Новини</a></li>
-        <li><a href="file:///C:/Users/Fujitsu/Desktop/Sublime%20Text%20Build%203176%20x64/index%20%D0%BC%D1%96%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82++++++.html">Деталі</a></li>
+        <li><a href="index.html">Головна</a></li>
+        <li class="active"><a href="index мій сайт++++.html">Новини</a></li>
+        <li><a href="index мій сайт++++++.html">Деталі</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="file:///C:/Users/Fujitsu/Desktop/Sublime%20Text%20Build%203176%20x64/index%20%D0%BC%D1%96%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82++.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
+        <li><a href="index мій сайт++.html"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
       </ul>
     </div>
   </div>
@@ -70,9 +70,9 @@
 <div class="container-fluid text-center">    
   <div class="row content">
     <div class="col-sm-2 sidenav">
-      <p><a href="file:///C:/Users/Fujitsu/Desktop/Sublime%20Text%20Build%203176%20x64/index%20%D0%BC%D1%96%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82+.html">Краєвиди</a></p>
+      <p><a href="index мій сайт+.html">Краєвиди</a></p>
       <p><a href="index мій сайт+++++.html">Тварини</a></p>
-      <p><a href="file:///C:/Users/Fujitsu/Desktop/Sublime%20Text%20Build%203176%20x64/index%20%D0%BC%D1%96%D0%B9%20%D1%81%D0%B0%D0%B9%D1%82+++.html">........</a></p>
+      <p><a href="index мій сайт+++.html">........</a></p>
     </div>
     <div class="col-sm-8 text-left"> 
       <center>
